--- a/docs/stylesheets/gbextra.css
+++ b/docs/stylesheets/gbextra.css
@@ -2,6 +2,10 @@
 /*@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");*/
 @import url("https://fontlibrary.org/face/trueno");
 
+@media screen and (min-width:  76.25em){
+.md-nav--integrated .md-nav__link[for=__toc]~.md-nav {border-left: .1rem dashed var(--md-primary-fg-color)!important;     margin-bottom: 1.5em!important;
+}} 
+
 /* forza il back to top a tornare in basso */
 .md-top {
     background: var(--md-primary-fg-color); 
